# eoos-project-sample-applications

./: .gitignore  CMakeLists.txt  README.md
codebase/: CMakeLists.txt
codebase/app-hello-world/: CMakeLists.txt
codebase/app-hello-world/source/: Program.cpp  main.cpp
scripts/python/: Build.py  Make.py
scripts/python/make/: Program.py  ProgramOnPosix.py  ProgramOnWin32.py
